--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,9 @@ footer {
 .button:hover {
   background-color: #a30021; /* Darker shade of Cardinal Red */
 }
+
 /* Dropdown Styles */
-select {
+.select-style {
   padding: 8px;
   border: 1px solid var(--mlb-primary-color);
   border-radius: 4px;
@@ -70,6 +71,13 @@ select {
   color: var(--mlb-primary-color);
   cursor: pointer;
 }
+
+/* Image Styles */
+.image {
+  max-width: 100%;
+  height: auto;
+}
+
 
 /*If we are using radio buttons we can use these styles*/
 /* Radio Button Styles */
@@ -88,3 +96,4 @@ input[type="radio"]:checked + label {
   font-weight: bold;
   color: var(--mlb-secondary-color);
 }
+
